<?xml version="1.0" encoding="utf-8"?>

<resources>

    <string name="app_name">DigitalSignV03</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="about_text">Some text here</string>
    <string name="about_title">About</string>
    <string name="text_activity1">Free mode</string>
    <string name="text_activity2">Tasks</string>
    <string name="text_settings">Settings</string>

    <string-array name="tasks">
        <item>1.  09.10.2012 22:30</item>
        <item>2.  09.10.2012 23:22</item>
        <item>3.  10.10.2012 11:12</item>
        <item>4.  10.10.2012 12:44</item>
        <item>5.  10.10.2012 14:23</item>
        <item>6.  10.10.2012 14:56</item>
        <item>7.  11.10.2012 10:10</item>
        <item>8.  11.10.2012 22:31</item>
        <item>9.  11.10.2012 22:35</item>
        <item>10. 11.10.2012 22:37</item>
        <item>11. 12.10.2012 11:06</item>
        <item>12. 13.10.2012 12:05</item>
        <item>13. 13.10.2012 15:20</item>
    </string-array>

    <string name="prefs_commonSettings">Common settings</string>
    <string name="prefs_serverSettings">Server settings</string>

    <string name="prefs_sendStatsPref_t">Send statistics to server</string>
    <string name="prefs_sendStatsPref_s">Upload the collected data to server (internet connection required)</string>

    <string name="prefs_checkTasksPref_t">Check for new task</string>
    <string name="prefs_checkTasksPref_s">Check for new task (internet connection required)</string>

    <string name="pref_animationPref_t">Animation</string>
    <string name="pref_animationPref_s">Enable/disable animation</string>

    <string name="pref_disappPref_t">Path disappear in task mode</string>
    <string name="pref_disappPref_s">Enable/disable disappear</string>

    <string name="pref_touchesEndedPref_t">touchesEnded timer</string>
    <string name="pref_touchesEndedPref_s">Time between the end of your input and saving the stats</string>

    <string name="pref_editDownloadLink_t">Task server link</string>
    <string name="pref_editDownloadLink_s">Server link, from which new tasks will be uploaded</string>

    <string name="pref_editUploadLink_t">Upload server link</string>
    <string name="pref_editUploadLink_s">Server link, where the collected data will be uploaded</string>

    <string name="pref_editTargetMail_t">Target e-mail</string>
    <string name="pref_editTargetMail_s">E-mail, where the copy of data will be send</string>

    <string name="pref_enableMailPref_t">Sending on e-mail</string>
    <string name="pref_enableMailPref_s">Enable/disable sending the copy of data on e-mail</string>

    <string name="pref_clearSamplesPref_t">Clear database with samples</string>
    <string name="pref_clearSamplesPref_s">DANGER!!!</string>

</resources>
