<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <PreferenceCategory
        android:title="@string/prefs_commonSettings">

        <Preference
            android:title="@string/prefs_sendStatsPref_t"
            android:summary="@string/prefs_sendStatsPref_s"
            android:key="sendStatsPref" />

        <Preference
            android:title="@string/prefs_checkTasksPref_t"
            android:summary="@string/prefs_checkTasksPref_s"
            android:key="checkTasksPref" />

        <Preference
            android:title="@string/pref_clearSamplesPref_t"
            android:summary="@string/pref_clearSamplesPref_s"
            android:key="clearSamplesPref" />

        <CheckBoxPreference
            android:title="@string/pref_animationPref_t"
            android:defaultValue="true"
            android:summary="@string/pref_animationPref_s"
            android:key="animationPref" />

        <CheckBoxPreference
            android:title="@string/pref_disappPref_t"
            android:defaultValue="false"
            android:summary="@string/pref_disappPref_s"
            android:key="disappPref" />

        <ListPreference
            android:name="touchesEnded timer"
            android:title="@string/pref_touchesEndedPref_t"
            android:summary="@string/pref_touchesEndedPref_s"
            android:entries="@array/timerListArray"
            android:defaultValue="700"
            android:entryValues="@array/timerListValues"
            android:key="touchesEndedPref" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/prefs_serverSettings">

        <EditTextPreference
            android:name="Task server link"
            android:title="@string/pref_editDownloadLink_t"
            android:summary="@string/pref_editDownloadLink_s"
            android:defaultValue="http://oapi.ourduty.zz.mu/checkNewTasks.php"
            android:key="editDownloadLink" />

        <EditTextPreference
            android:name="Upload server link"
            android:title="@string/pref_editUploadLink_t"
            android:summary="@string/pref_editUploadLink_s"
            android:defaultValue="http://oapi.ourduty.zz.mu/updateBD.php"
            android:key="editUploadLink" />


    </PreferenceCategory>

</PreferenceScreen>